# docs/swagger.json
@@ -92,7 +92,7 @@
                 }
             }
         },
-        "/subscriptions/total-cost": {
+        "/subscriptions/total": {
             "get": {
                 "description": "Calculate total cost of subscriptions with optional filters",
                 "consumes": [
@@ -174,8 +174,7 @@
                 "summary": "Get a subscription by id",
                 "parameters": [
                     {
-                        "type": "string",
-                        "format": "uuid",
+                        "type": "integer",
                         "description": "Subscription ID",
                         "name": "id",
                         "in": "path",
@@ -258,8 +257,7 @@
                 "summary": "Delete a subscription by id",
                 "parameters": [
                     {
-                        "type": "string",
-                        "format": "uuid",
+                        "type": "integer",
                         "description": "Subscription ID",
                         "name": "id",
                         "in": "path",
@@ -294,7 +292,7 @@
                     "type": "string"
                 },
                 "id": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "price": {
                     "type": "integer"
